
Changelog
=========

0.1.6 (unreleased)
------------------

- Added more strings classifiers items for this packages
  [macagua]

- Added manifest file for diazo theme and the preview file
  [macagua]

0.1.5 (2012-01-24)
------------------

* Fix brown bag release (missing theme files)
  [aclark]

0.1.4 (2012-01-24)
------------------

* Fix brown bag release
  [aclark]

0.1.3 (2012-01-24)
------------------

* Fix brown bag release
  [aclark]

0.1.2 (2012-01-23)
------------------

* Minor theme improvements
  [aclark]

0.1.1 (2011-05-24)
------------------

* Use absolute prefix support in Diazo
  [elro]

0.1.0 (2011-05-22)
------------------

* Initial release
  [aclark]