@@ -1,7 +1,26 @@
 <configure
-    xmlns:plone="http://namespaces.plone.org/plone"
     xmlns:browser="http://namespaces.zope.org/browser"
-    xmlns="http://namespaces.zope.org/zope">
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:plone="http://namespaces.plone.org/plone"
+    xmlns="http://namespaces.zope.org/zope"
+    i18n_domain="plonetheme.unilluminated">
+
+    <genericsetup:registerProfile
+        name="default"
+        title="plonetheme.unilluminated"
+        directory="profiles/default"
+        description="Installs the plonetheme.unilluminated package"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <genericsetup:registerProfile
+        name="uninstall"
+        title="plonetheme.unilluminated: Uninstall profile for Plone 4 Diazo Theme"
+        directory="profiles/uninstall"
+        description="Uninstalls the plonetheme.unilluminated package"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
 
     <plone:static
         directory="theme/unilluminated" type="theme" />
