@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<metadata>
+  <version>1000</version>
+  <dependencies>
+      <dependency>profile-plone.app.theming:default</dependency>
+  </dependencies>
+</metadata>
