@@ -1,0 +1,4 @@
+<theme>
+    <name>plonetheme.unilluminated</name>
+    <enabled>true</enabled>
+</theme>
